# freshgit

./: Cargo.toml  README.md  config.json
src/: dl_upd.rs  git_ops.rs  main.rs
