[package]
name = "freshgit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.*", features = ["derive"] }
lazy_static = { version = "1.*" }
tokio = { version = "1.*", features = ["full"] }
serde = { version = "1.*", features = ["derive"] }
serde_json = { version = "1.*" }
log = "0.4.*"
simple_logger = { version = "2.*", default-features = true }
walkdir = { version = "2.*" }

[profile.release]
strip = true      # Automatically strip symbols from library
lto = true
codegen-units = 1
panic = "abort"
